add more packages
add the following packages:
-stressapptest
-memtester
-bc
-python3
-python3-pip
-curl

Change-Id: I4681ecd65e436201f49af9867fe20027c092f32d
Signed-off-by: Rock Shen <rock_shen@asus.com>

Former-commit-id: 5bfd6c02c7a87250e7c4804f5469fb49bb22f1b0

--- a/conf/machine/rzfive-tinker-v.conf
+++ b/conf/machine/rzfive-tinker-v.conf
@@ -32,4 +32,10 @@ CORE_IMAGE_EXTRA_INSTALL += " \
     lsof \
     openssh \
     vim \
+    stressapptest \
+    memtester \
+    bc \
+    python3 \
+    python3-pip \
+    curl \
 "
