add Docker support for Tinker V
Change-Id: I8972a67eb6d2c99726378b01513feba91ec7bfac
Signed-off-by: Rock Shen <rock_shen@asus.com>

Former-commit-id: bc55d925a21bf756a73e1502de2ad0219f50238a

--- a/docs/template/conf/tinker-v/local.conf
+++ b/docs/template/conf/tinker-v/local.conf
@@ -313,3 +313,5 @@ INSTALL_RZG2_DEMOS = "0"
 DL_DIR = "${TOPDIR}/downloads"
 BB_NO_NETWORK = "0"
 
+# Comment out a following line to enable the Docker Engine.
+#DISTRO_FEATURES_remove = " docker"
