--- a/conf/machine/rzfive-tinker-v.conf
+++ b/conf/machine/rzfive-tinker-v.conf
@@ -39,4 +39,7 @@ CORE_IMAGE_EXTRA_INSTALL += " \
     python3-pip \
     curl \
     packagegroup-core-buildessential \
+    libgpiod \
+    libgpiod-dev \
+    libgpiod-tools \
 "
